--- a/sass/my.sass
+++ b/sass/my.sass
@@ -203,6 +203,9 @@ body
 	padding: 30px 30px
 	text-align: center
 	color: white
+	transform: translateY(100px)
+	opacity: 0
+	transition: all .5s ease
 	@media only screen and (max-width: 500px)
 		padding: 20px 3px 3px
 
@@ -273,6 +276,17 @@ body
 		margin: 5px 0px
 		padding-left: 10px
 		padding-right: 10px
+
+.advantages_element_img
+	width: 500px
+	height: 170px
+	overflow: hidden
+	@media only screen and (max-width: 550px)
+		width: auto
+	img
+		transition: transform .5s ease
+		&:hover
+			transform: scale(1.15)
 
 .advantages_element_text
 	@media only screen and (max-width: 560px)
